--- a/README.adoc
+++ b/README.adoc
@@ -19,11 +19,9 @@ The playbook and instructions for the Demo site are located in the {url-site-rea
 
 == Copyright and License
 
-Copyright (C) 2017-present by OpenDevise Inc. and the individual contributors to Antora.
+cc0
 
-Use of this software is granted under the terms of the https://www.mozilla.org/en-US/MPL/2.0/[Mozilla Public License Version 2.0] (MPL-2.0).
-See link:LICENSE[] to find the full license text.
 
 == Authors
 
-Development of Antora is led and sponsored by {url-opendevise}[OpenDevise Inc].
+Development of these training materials are led and sponsored by [usegroup](https://www.usegroup.de).
