--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -1,12 +1,7 @@
 = Inline Text Formatting
 :example-caption!:
 
-You can add the following inline styles to your content:
-
-* Bold
-* Italic
-* Monospace
-* Highlight
+Hello world
 
 == Bold and italic
 
