--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -1,8 +1,5 @@
 * xref:index.adoc[]
-* xref:special-characters.adoc[]
+* Further info
+** xref:faq.adoc[]
+** xref:kb.adoc[]
 * xref:imprint.adoc[]
-* xref:sidebar.adoc[]
-* xref:ui-macros.adoc[]
-* Lists
-** xref:lists/ordered-list.adoc[]
-** xref:lists/unordered-list.adoc[]
