--- a/modules/ROOT/pages/faq.adoc
+++ b/modules/ROOT/pages/faq.adoc
@@ -1,6 +1,6 @@
 = Frequently Asked Questions
 
-=== Stand B2B
+=== When will it be Mandatory
 
 Vermittlungsausschuss vgl
 https://dip.bundestag.de/vorgang/gesetz-zur-st%C3%A4rkung-von-wachstumschancen-investitionen-und-innovation-sowie-steuervereinfachung/303318?term=Wachstumschancengesetz&f.wahlperiode=20&rows=25&pos=1
@@ -11,50 +11,52 @@ https://medium.com/@jochen.staerk/why-and-how-germany-bans-b2b-paper-invoices-a4
 
 === How do I know it's ZUGFeRD/how many do I already have/what is the market share?
 
-=== Abkürzung: Was heißt eigentlich ZUGFeRD?
+=== What does the abbreviation stand for?
 
-ZUGFeRD hieß mal Zentraler User Guide Forum elektronische Rechnung
-Deutschland. Das ``ZUG'' im Name war möglicherweise eine Hommage an die
-MUG, die Message User Group, die CWA erarbeitete und damit definierte
-welche Teilmenge bspw. von CII für den europäischen Gebraucht wichtig
-ist: USt bspw, ja, Nordamerikanische Sales tax bspw. nein. Der
-internationale Name wurde Factur-X. Aus historischen Gründen wurde
-Factur-X 1 released als ZUGFeRD gerade Version 2 erreichte, ZUGFeRD 2
-entspricht also Factur-X 1.
+ZUGFeRD was once called Central User Guide Forum Electronic Invoice
+Germany (Zentraler User Guide Forum elektronische Rechnung Deutschland). The ``ZUG'' in the name was possibly a tribute to the
+MUG, the Message User Group, which developed CWA and thus defined
+which subset of CII, for example, is important for European use: VAT, for example
+is important for European use: VAT, for example, yes, North American sales tax, for example, no. The
+international name became Factur-X. For historical reasons
+Factur-X 1 was released when ZUGFeRD had just reached version 2, ZUGFeRD 2
+therefore corresponds to Factur-X 1.
 
-Nach Order-X und nach Beginn aber vor Abschluss der Arbeiten (an
-Lieferscheinen, genannt Deliver-X) wurde ZUGFeRD zur Formatfamilie: Der
-Begriff wechselte in den Plural, Zentrale User Guides Forum
-elektronische Rechnung Deutschland, die Abkürzung blieb (vgl
+After Order-X and after the start but before the completion of the work (on
+delivery bills, called Deliver-X), ZUGFeRD became a format family: the term
+The term changed to the plural, Zentrale User Guides Forum
+elektronische Rechnung Deutschland, the abbreviation remained (cf
 https://www.ferd-net.de/aktuelles/meldungen/rueckblick-auf-die-sitzung-des-ferd-plenums.html).
 
 === Europa
 
-mit dem EU-Richtlinienentwurf Vat in the Digital Age (ViDA)
-https://audiovisual.ec.europa.eu/en/topnews/M-009199 arbeitet man dran,
-zumindest was grenzüberschreitende Geschäfte angeht.
+With the EU draft directive Vat in the Digital Age (ViDA)
+https://audiovisual.ec.europa.eu/en/topnews/M-009199 is being worked on,
+at least as far as cross-border transactions are concerned.
 
-Und ViDA möchte da auf dem B2G-E-Rechnungsstandard EN16931 aufbauen.
+And ViDA wants to build on the B2G e-invoicing standard EN16931.
 
 === Was ist ein USt-Meldesystem
 
-Es gibt eine ganze Reihe von möglichen Umsatzsteuermeldesystemtypen (vgl
+There is a whole range of Continous Transaction Control (CTC) systems, in german called VAT reporting system types (Umsatzsteuer-Meldesystem) (cf
 Kollmann
 https://www.pagero.com/downloads/documents/compliance/Next_Generation_Model-Decentralised_CTC_and_Exchange_v1.pdf
-S.6: Italien ist Centralized Clearance, EU~Frankreich ist EESPA,
-i.e. Decentralized CTC and Exchange) und Deutschland versucht schonmal
-mit der Vorgabe, EN16931 zu benutzen kompatibel zum zukünftigen
-europäischen System zu werden.
+p.6: Italy is Centralized Clearance, EU~France is EESPA,
+i.e. Decentralized CTC and Exchange) and Germany is already trying
+to become compatible with the future European system with the requirement to use EN16931.
+European system.
+
+
 
 === XRechnung automatisiert
 
-Die Kosit, sozusagen die Behörde für Behördenrechnungen, hat sich dem
-EDI-Netzwerk Peppol angeschlossen und den API-Zugriff aufs ZRE
-eingestellt. Das bedeutet die einzige Möglichkeit Behördenrechnungen in
-Deutschland komplett automatisiert einzureichen ist über Peppol. Man
-muss die Peppol-Rechnung nicht nur weiterhin ans richtige Portal
-addressieren, man muss sich wohl auch bei jedem Portal vorher kurz
-(immerhin automatisiert) freischalten.
+Kosit, the authority for government invoices, so to speak, has joined the
+EDI network Peppol and discontinued API access to the ZRE.
+to the ZRE. This means that the only way to submit government invoices in
+Germany is completely automated is via Peppol. You
+not only still have to address the Peppol invoice to the correct portal
+to the correct portal, you also have to register with each portal beforehand
+(at least automated) beforehand.
 
 === PDF
 
@@ -88,11 +90,11 @@ https://www.beuth.de/en/standard/din-en-16931-1/314992770
 
 === Gutschrift
 
-echte kaufmännische Gutschrift: irgendein nicht-380er typecode, kein
-Minus ABER Stornorechnung (und das ist was 90% mit Gutschrift meinen):
-negative Menge->negativer Preis, negative USt also praktisch alles
-Minus. Typecode bei Stornorechnung ich meine 384, es gibt ein
-offizielles ZUGFeRD-Beispiel.
+real commercial credit note: any non-380 type code, no
+minus BUT cancellation invoice (and that's what 90% mean by credit note):
+negative quantity->negative price, negative VAT so practically everything
+Minus. Typecode for cancellation invoice I mean 384, there is an
+official ZUGFeRD example.
 
 === XR Version gültig
 
@@ -109,19 +111,16 @@ https://blog.eight02.com/2011/05/validating-xml-with-iso-schematron-on.html
 
 === XRechnung Referenzprofil CII
 
-XRechnung für UBL und UN/CEFACT definiert ist, ZUGFeRD aber selbst im
-Referenzprofil XRechnung ausschließlich ein UN/CEFACT-Format ist. Im
-Review hielt man die entsprechende Erwähnung (Abschnitt 3.2.4 auf S.13)
-für ausreichend.
+XRechnung is defined for UBL and UN/CEFACT, but ZUGFeRD itself in the
+XRechnung reference profile is exclusively a UN/CEFACT format. In the
+review, the corresponding mention (section 3.2.4 on p. 13) was considered sufficient.
+was considered sufficient.
 
-=== Nachkommastellen
+=== Decimals 
 
-Meines Wissens dürfen Mengen und Preise zwar vierstellig sein (vgl. die
-englische Factur-X Spezifikation 1.0.50, Kap 7.1.5), die Position muss
-dann aber auf zweistellige Summen gerundet werden - und die Summe der
-Positionen mit demselben Umsatzsteuersatz führt zum zweistelligen
-Umsatzsteuerbetrag für diesen Satz. Siehe auch EN16931-1 Kap. 6.5.12,
-dort sind nettopreise interessanterweise zweistellig notiert.
+As far as I know, quantities and prices may have four digits (see theFactur-X specification 1.0.50, section 7.1.5), the item must be rounded to two-digit sums
+be rounded to two-digit totals - and the sum of the items with the sameitems with the same VAT rate leads to the two-digit VAT amount for this rate.VAT amount for this rate. See also EN16931-1 chapter 6.5.12,
+where, interestingly, net prices are quoted in two digits.
 
 === Order-X
 
@@ -195,22 +194,8 @@ Ust-betrag nettobetrag 35,56 142,25 17,84 71,37 14,96 59,85 10,56 42,25
 4,84 19,37 4,84 19,37 ist eben NICHT (*_ACHTUNG FALSCH_*) 88,60 +354,46=
 443,06 SONDERN eben 354,46*0,25=88,615~88,62 also 88,62 +354,46= 443,08
 
-=== Schritte neues Attribut
 
-[arabic]
-. create a XML test file which validates, e.g. using an accoring Schema
-file binding in Intellij and validate with mustang
-. decide if e.g. a string value is sufficient or if a structure needs to
-be implemented. In your case you will almost for certain need some
-ExchangeCurrency class because we’re talking about multiple attributes
-like exchange rate and date of the exchange rate
-. add an according unit test
-. implement it in the interface
-. add according code to the ZUGFeRD2pullprovider to generate the
-according XML
-. add accrding methods in the invoice class
-
-=== How can I write
+=== How to write ZUGFeRD
 
 ==== Requirements
 
@@ -255,6 +240,8 @@ Mustangserver. So: May I politely inquire if you plan to contribute?
 
 === GoBD
 
+Principles for the proper keeping and storage of books,records and documents in electronic form and fordata access
+
 Grundsätze zur ordnungsmäßigen Führung und Aufbewahrung von Büchern,
 Aufzeichnungen und Unterlagen in elektronischer Form sowie zum
 Datenzugriff
@@ -279,34 +266,26 @@ via the ZF Infopaket https://www.ferd-net.de/ZUGFeRD-Download
 
 === Was ist der Unterschied zwischen Factur-X und ZUGFeRD
 
-Factur-X 1.0.50 ist der französische und internationale Name von ZUGFeRD
-2.1. Der Factur-X-Dateiname (factur-x.xml) und Metadaten (RDF-Metadaten
-mit dem Namespace Prefix „fx“) sind seit ZUGFeRD 2.1 bevorzugt.
+Factur-X 1.0.50 is the French and international name of ZUGFeRD2.1 The Factur-X file name (factur-x.xml) and metadata (RDF metadatawith the namespace prefix "fx") are preferred since ZUGFeRD 2.1.
 
-=== Ist meine Berechnungsmethode korrekt?
+=== How invoices are calculated
 
-Die Berechnung von elektronischen Rechnungen ist im Rahmen von EN16931-1
-normiert, das kostenlos online bezogen werden kann, in Deutschland im
-Shop der DIN angegliederten Beuth Verlags.
+The calculation of electronic invoices is standardized within the framework of EN16931-1which can be obtained free of charge online, in Germany in the shop of thestore of the DIN-affiliated Beuth publishing house.
 https://www.beuth.de/en/standard/din-en-16931-1/314992770
 
 === Welche Attributwerte kann ich verwenden?
 
-Die entsprechenden Codelisten werden vom CEF verwaltet und
-veröffentlicht. Sie sind Teil des ZUGFeRD Infopakets. Gibt es kostenlose
-Tools? Unter http://zugferd.org/ gibt es eine Liste von
-Open-Source-Tools die direkt oder indirekt mit ZUGFeRD zu tun haben.
+The corresponding code lists are managed and published by the CEF.published. They are part of the ZUGFeRD info package. Are there any free
+tools? At http://zugferd.org/ there is a list of
+open source tools that are directly or indirectly related to ZUGFeRD.
 
 === Kann ich alle PDF-Dateien für ZUGFeRD verwenden?
+ZUGFeRD is based on archivable (PDF/A) PDFs that embed all the data required fordata required for display, such as fonts.A free
+possibility to convert "normal" PDF files is, for example, Ghostscript.Ghostscript.
 
-ZUGFeRD basiert auf archivierbaren (PDF/A) PDFs, die alle zur
-Darstellung benötigten Daten wie Schriftarten einbetten. Eine kostenlose
-Möglichkeit „normale“ PDF-Dateien zu konvertieren stellt beispielsweise
-Ghostscript dar.
 
 === Wie sieht eine ZUGFeRD-Datei aus
 
-Abgesehen von der Identifikation in den Metadaten ist beispielsweise im
-Adobe Reader ist eine ZUGFeRD-Datei durch Hinweis auf PDF-A und das
-Büroklammersymbol mit der eingebetten Datei zugferd-invoice.xml oder
-factur-x.xml ersichtlich.
+Apart from the identification in the metadata, for example, in the
+Adobe Reader, for example, a ZUGFeRD file is identified by a reference to PDF-A and the
+paperclip symbol with the embedded file zugferd-invoice.xml orfactur-x.xml can be seen.
